force-app/main/default/objects/Account/fields/Accounts_Email__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Email__c</fullName>
    <label>Accounts Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>