force-app/main/default/objects/Account/fields/ACN_No__c.field-meta.xml
<CustomField>
    <fullName>ACN_No__c</fullName>
    <formula>RIGHT(Tax_Number__c, LEN(Tax_Number__c) - 2)</formula>
    <label>ACN No</label>
    <type>Text</type>
</CustomField>