force-app/main/default/objects/Account/fields/Competing_Product_Info1_Competitor3__c.field-meta.xml
<CustomField>
    <fullName>Competing_Product_Info1_Competitor3__c</fullName>
    <label>Competing Product Info1(Competitor3)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>