force-app/main/default/objects/Account/fields/Competitor1__c.field-meta.xml
<CustomField>
    <fullName>Competitor1__c</fullName>
    <label>Competitor1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>