force-app/main/default/objects/Account/fields/Competitor2__c.field-meta.xml
<CustomField>
    <fullName>Competitor2__c</fullName>
    <label>Competitor2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>