force-app/main/default/objects/Account/fields/Competitor3__c.field-meta.xml
<CustomField>
    <fullName>Competitor3__c</fullName>
    <label>Competitor3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>