force-app/main/default/objects/Account/fields/Continent__c.field-meta.xml
<CustomField>
    <fullName>Continent__c</fullName>
    <label>Continent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Continent</valueSetName>
    </valueSet>
</CustomField>