force-app/main/default/objects/Account/fields/Credit_Investigation_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Investigation_Date__c</fullName>
    <label>Credit Investigation Date</label>
    <type>Date</type>
</CustomField>