force-app/main/default/objects/Account/fields/Credit_Investigation_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Investigation_Note__c</fullName>
    <label>Credit Investigation Note</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>