force-app/main/default/objects/Account/fields/CreditNumber__c.field-meta.xml
<CustomField>
    <fullName>CreditNumber__c</fullName>
    <label>CreditNumber</label>
    <summaryForeignKey>Customer_Credit_Info__c.Customer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>