force-app/main/default/objects/Account/fields/Customer_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approval_Status__c</fullName>
    <label>Customer Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Approving</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>SynchronizedMDG</fullName>
            </value>
            <value>
                <fullName>SyncFailed</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
                <isActive>false</isActive>
                <label>Reject</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>