force-app/main/default/objects/Account/fields/Customer_Assess_Level__c.field-meta.xml
<CustomField>
    <fullName>Customer_Assess_Level__c</fullName>
    <description>Customer Acces Level</description>
    <label>Customer Assess Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>