force-app/main/default/objects/Account/fields/Customer_Credit_Is_Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Customer_Credit_Is_Valid_Until__c</fullName>
    <label>Customer Credit Is Valid Until</label>
    <type>Date</type>
</CustomField>