force-app/main/default/objects/Account/fields/Customer_Level__c.field-meta.xml
<CustomField>
    <fullName>Customer_Level__c</fullName>
    <label>Customer Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>User_Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>