force-app/main/default/objects/Account/fields/Customer_Potential__c.field-meta.xml
<CustomField>
    <fullName>Customer_Potential__c</fullName>
    <label>Customer Potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>