force-app/main/default/objects/Account/fields/Customer_Remaining_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Customer_Remaining_Credit_Limit__c</fullName>
    <label>Customer Remaining Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>