force-app/main/default/objects/Account/fields/Customer_Tax_Number_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tax_Number_Category__c</fullName>
    <label>Customer Tax Number Category</label>
    <summaryForeignKey>Customer_Tax_Number_Category__c.Customer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>