force-app/main/default/objects/Account/fields/Date_Business_Started__c.field-meta.xml
<CustomField>
    <fullName>Date_Business_Started__c</fullName>
    <label>Date Business Started</label>
    <type>Date</type>
</CustomField>