force-app/main/default/objects/Account/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <label>Group Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>