force-app/main/default/objects/Account/fields/Have_Credit__c.field-meta.xml
<CustomField>
    <fullName>Have_Credit__c</fullName>
    <formula>IF( Customer_Credit_Limit__c=null  ,false,true  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Have Credit</label>
    <type>Checkbox</type>
</CustomField>