force-app/main/default/objects/Account/fields/HQ_Email__c.field-meta.xml
<CustomField>
    <fullName>HQ_Email__c</fullName>
    <label>HQ Contract Receiver Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>