force-app/main/default/objects/Account/fields/Is_Credit_Investigation_Attached__c.field-meta.xml
<CustomField>
    <fullName>Is_Credit_Investigation_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Credit Investigation Attached</label>
    <type>Checkbox</type>
</CustomField>