force-app/main/default/objects/Account/fields/Is_Upload_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Is_Upload_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Upload Attachment</label>
    <type>Checkbox</type>
</CustomField>