force-app/main/default/objects/Account/fields/Is_YPF__c.field-meta.xml
<CustomField>
    <fullName>Is_YPF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is YPF</label>
    <type>Checkbox</type>
</CustomField>