force-app/main/default/objects/Account/fields/MDG__c.field-meta.xml
<CustomField>
    <fullName>MDG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MDG</label>
    <type>Checkbox</type>
</CustomField>