force-app/main/default/objects/Account/fields/MDG_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>MDG_Customer_Code__c</fullName>
    <externalId>true</externalId>
    <label>MDG Customer Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>