force-app/main/default/objects/Account/fields/Operating_Address__c.field-meta.xml
<CustomField>
    <fullName>Operating_Address__c</fullName>
    <label>Operating Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>