force-app/main/default/objects/Account/fields/Original_Customer__c.field-meta.xml
<CustomField>
    <fullName>Original_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Original_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>