force-app/main/default/objects/Account/fields/Owner_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Owner_Sales_Org__c</fullName>
    <formula>TEXT(Owner.Sales_Org__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Sales Org</label>
    <type>Text</type>
</CustomField>