force-app/main/default/objects/Account/fields/Pre_Sinosure_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sinosure_Credit_Limit__c</fullName>
    <description>The expected Sinosure credit Limit</description>
    <label>Expected Sinosure Credit (USD)</label>
    <length>11</length>
    <type>Text</type>
</CustomField>