force-app/main/default/objects/Account/fields/Province_State__c.field-meta.xml
<CustomField>
    <fullName>Province_State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Province/State</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Country_Province_Master_Data__c.Country__c</field>
            <operation>equals</operation>
            <valueField>$Source.Country__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Country_Province_Master_Data__c</referenceTo>
    <relationshipLabel>Customers (Province/State)</relationshipLabel>
    <relationshipName>Accounts_Province</relationshipName>
    <type>Lookup</type>
</CustomField>