force-app/main/default/objects/Account/fields/Risk_Class__c.field-meta.xml
<CustomField>
    <fullName>Risk_Class__c</fullName>
    <label>Risk Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Risk_Class</valueSetName>
    </valueSet>
</CustomField>