force-app/main/default/objects/Account/fields/SAP_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Type__c</fullName>
    <label>SAP Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Producing</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Trading</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>