force-app/main/default/objects/Account/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>Country__r.Name +&apos;,&apos;+ Province_State__r.Name +&apos;,&apos;+ City__c +&apos;,&apos;+ Street__c +&apos;,&apos;+ House_Number__c</formula>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>