force-app/main/default/objects/Account/fields/Sinosure_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Sinosure_Customer_Code__c</fullName>
    <label>Sinosure Customer Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>