force-app/main/default/objects/Account/fields/Sync_Failure_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Sync_Failure_Reasons__c</fullName>
    <label>Sync Failure Reasons</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>