force-app/main/default/objects/Account/fields/Tax_Identification__c.field-meta.xml
<CustomField>
    <fullName>Tax_Identification__c</fullName>
    <label>Tax Identification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Tax_Identification</valueSetName>
    </valueSet>
</CustomField>