force-app/main/default/objects/Account/fields/Tax_Numbe_No_Bar__c.field-meta.xml
<CustomField>
    <fullName>Tax_Numbe_No_Bar__c</fullName>
    <label>Tax Numbe No Bar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>