force-app/main/default/objects/Account/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <label>Legal Person Telephone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>