force-app/main/default/objects/Account/fields/User_Country__c.field-meta.xml
<CustomField>
    <fullName>User_Country__c</fullName>
    <defaultValue>$User.Country__c</defaultValue>
    <label>User Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>