force-app/main/default/objects/Account/fields/Virtual_customer__c.field-meta.xml
<CustomField>
    <fullName>Virtual_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Virtual customer</label>
    <type>Checkbox</type>
</CustomField>