force-app/main/default/objects/Account/recordTypes/Finance_Account.recordType-meta.xml
<RecordType>
    <fullName>Finance_Account</fullName>
    <active>false</active>
    <label>Finance Account</label>
</RecordType>