force-app/main/default/objects/Account/recordTypes/Personal_Account.recordType-meta.xml
<RecordType>
    <fullName>Personal_Account</fullName>
    <active>false</active>
    <label>Personal Account</label>
</RecordType>