force-app/main/default/objects/Account/recordTypes/ShipTo_Account.recordType-meta.xml
<RecordType>
    <fullName>ShipTo_Account</fullName>
    <active>true</active>
    <label>ShipTo Customer</label>
</RecordType>