force-app/main/default/objects/Account/validationRules/Can_not_pick_this_group.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_pick_this_group</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND(TEXT(Customer_Group__c)=&apos;Z000&apos;,$User.ProfileId!=&apos;00eHs00000329pjIAA&apos;,$User.ProfileId!=&apos;00eHs00000163XdIAI&apos;),true,false)</errorConditionFormula>
    <errorDisplayField>Customer_Group__c</errorDisplayField>
    <errorMessage>Can not select this group</errorMessage>
</ValidationRule>