force-app/main/default/objects/Account/validationRules/Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX(Telephone__c, &quot;.*[A-Za-z].*&quot;)</errorConditionFormula>
    <errorDisplayField>Telephone__c</errorDisplayField>
    <errorMessage>It&apos;s not a phone number</errorMessage>
</ValidationRule>