force-app/main/default/objects/Account/validationRules/Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(CONTAINS(Telephone__c, &apos;+&apos;),CONTAINS(Telephone__c, &apos;.&apos;))</errorConditionFormula>
    <errorDisplayField>Telephone__c</errorDisplayField>
    <errorMessage>please remove &apos;+&apos;</errorMessage>
</ValidationRule>