force-app/main/default/objects/Account/validationRules/Tax_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_Number</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(
    REGEX(Tax_Number__c, &quot;^[0-9]{2}-[0-9]{8}-[0-9]{1}$&quot;)
), Country__r.Code__c =&apos;AR&apos;)</errorConditionFormula>
    <errorDisplayField>Tax_Number__c</errorDisplayField>
    <errorMessage>The format of Tax Number should be: XX-XXXXXXXX-X</errorMessage>
</ValidationRule>