force-app/main/default/objects/Account/listViews/All_Customers.listView-meta.xml
<ListView>
    <fullName>All_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Business_Model__c</columns>
    <columns>Customer_Short_Name__c</columns>
    <columns>Group_Name__c</columns>
    <columns>MDG_Customer_Code__c</columns>
    <columns>Country__c</columns>
    <columns>Province_State__c</columns>
    <columns>Customer_Approval_Status__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Tax_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Customers</label>
</ListView>