force-app/main/default/objects/Account/listViews/Mx_Model_B_Customer.listView-meta.xml
<ListView>
    <fullName>Mx_Model_B_Customer</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Business_Model__c</columns>
    <columns>Customer_Short_Name__c</columns>
    <columns>Group_Name__c</columns>
    <columns>MDG_Customer_Code__c</columns>
    <columns>Country__c</columns>
    <columns>Province_State__c</columns>
    <columns>Customer_Approval_Status__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Tax_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Model__c</field>
        <operation>includes</operation>
        <value>B0</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Mexico</value>
    </filters>
    <label>MX Model B Customer</label>
    <sharedTo>
        <group>X3010</group>
        <role>HQ_Commercial</role>
        <role>Mexico_Area_Head</role>
        <role>Mexico_BackOffice_Finance</role>
        <role>Mexico_Country_Manager</role>
        <role>Mexico_Rainbow_Agro_Logistics</role>
    </sharedTo>
</ListView>