force-app/main/default/objects/Account/listViews/Shiptp_of_All_Customers.listView-meta.xml
<ListView>
    <fullName>Shiptp_of_All_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Business_Model__c</columns>
    <columns>MDG_Customer_Code__c</columns>
    <columns>Country__c</columns>
    <columns>Province_State__c</columns>
    <columns>Customer_Approval_Status__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owner_Sales_Org__c</field>
        <operation>equals</operation>
        <value>5070</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.ShipTo_Account</value>
    </filters>
    <filters>
        <field>Is_YPF__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>Retira</value>
    </filters>
    <label>YPF Ship To</label>
    <sharedTo>
        <group>X5070</group>
    </sharedTo>
</ListView>